# Einsums

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  FutureIdeas.md  LICENSE  LICENSE.txt  README.md  THIRD-PARTY-LICENSES  einsums_profiling.ods  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-Symbols.html  genindex-T.html  genindex-U.html  genindex-V.html  genindex-Z.html  (+11 more)
devtools/profiling/: CMakeLists.txt  einsums_profiling.ods  profile_blas.cpp  profile_einsums.cpp  profile_einsums.py  profile_for_loop.c  profile_fort_loop.f03  profile_numpy.py
ext/: CMakeLists.txt
libs/: CMakeLists.txt  README.rst  create_module_skeleton.py  index.html  index.rst  overview.html  overview.rst
libs/Einsums/: CMakeLists.txt  index.html  index.rst  modules.html  modules.rst  todo.html  todo.rst
libs/Einsums/Assertion/: CMakeLists.txt  README.rst
libs/Einsums/BLAS/: CMakeLists.txt  README.rst
libs/Einsums/BLASBase/: CMakeLists.txt  README.rst
libs/Einsums/BLASVendor/: CMakeLists.txt  README.rst
libs/Einsums/Backtrace/: CMakeLists.txt  README.rst
libs/Einsums/Benchmark/: CMakeLists.txt  README.rst
libs/Einsums/BlockManager/: CMakeLists.txt  README.rst
libs/Einsums/BufferAllocator/: CMakeLists.txt  README.rst
libs/Einsums/CommandLine/: CMakeLists.txt  README.rst
libs/Einsums/Concepts/: CMakeLists.txt  README.rst
libs/Einsums/Config/: CMakeLists.txt  README.rst
libs/Einsums/Debugging/: CMakeLists.txt  README.rst
libs/Einsums/Decomposition/: CMakeLists.txt
libs/Einsums/DesignPatterns/: CMakeLists.txt  README.rst
libs/Einsums/Errors/: CMakeLists.txt  README.rst
libs/Einsums/FFT/: CMakeLists.txt  README.rst
libs/Einsums/GPUMemory/: CMakeLists.txt  README.rst
libs/Einsums/GPUStreams/: CMakeLists.txt  README.rst
libs/Einsums/Graph/: CMakeLists.txt  README.rst
libs/Einsums/HPTT/: CMakeLists.txt  README.rst
libs/Einsums/ITTNotify/: CMakeLists.txt  README.rst
libs/Einsums/Iterator/: CMakeLists.txt  README.rst
libs/Einsums/JSON/: CMakeLists.txt  README.rst
libs/Einsums/LinearAlgebra/: CMakeLists.txt  README.rst
libs/Einsums/Logging/: CMakeLists.txt  README.rst
libs/Einsums/Memory/: CMakeLists.txt  README.rst
libs/Einsums/Preprocessor/: CMakeLists.txt  README.rst
libs/Einsums/Print/: CMakeLists.txt  README.rst
libs/Einsums/Profile/: CMakeLists.txt  README.rst
libs/Einsums/Reflection/: CMakeLists.txt  README.rst
libs/Einsums/Runtime/: CMakeLists.txt  README.rst
libs/Einsums/RuntimeConfiguration/: CMakeLists.txt  README.rst
libs/Einsums/SmartVector/: CMakeLists.txt  README.rst
libs/Einsums/StringUtil/: CMakeLists.txt  README.rst
libs/Einsums/Tensor/: CMakeLists.txt  README.rst
libs/Einsums/TensorAlgebra/: CMakeLists.txt  README.rst
libs/Einsums/TensorBase/: CMakeLists.txt  README.rst
libs/Einsums/TensorImpl/: CMakeLists.txt  README.rst
libs/Einsums/TensorUtilities/: CMakeLists.txt  README.rst
libs/Einsums/TypeSupport/: CMakeLists.txt  README.rst
libs/Einsums/Utilities/: CMakeLists.txt  README.rst
libs/Einsums/Version/: CMakeLists.txt
libs/Einsums/hipBLAS/: CMakeLists.txt  README.rst
libs/Einsums/hipBLASVendor/: CMakeLists.txt  README.rst
libs/EinsumsExperimental/: CMakeLists.txt  index.html  index.rst  modules.html  modules.rst  todo.html  todo.rst
libs/EinsumsExperimental/Decomposition/: CMakeLists.txt  README.rst
libs/EinsumsPy/: .is_python_lib  CMakeLists.txt  ExportAll.cpp.in  closer.txt  index.html  index.rst  modules.html  modules.rst  preamble.txt  todo.html  todo.rst
libs/create_module_skeleton/: .is_python_lib  ExportAll.cpp.in  ExportAll.cpp.in.fstring  __init__.py  __main__.py  build_structure.py  cleanup_cmake.py  cmake_template.txt  cmake_template.txt.fstring  configure_toplevel.py  index.rst.fstring  modules.rst  modules.rst.fstring  python_closer.txt  python_closer.txt.fstring  python_preamble.txt  todo.rst.fstring
libs/src/: dummy.cpp  dummy_main.cpp
src/: Blas.cpp  CMakeLists.txt  Decomposition.cpp  DeviceSort.hip  ElementOperations.cpp  Exception.cpp  FFT.cpp  GPULinearAlgebra.hip  GPUTensorAlgebra.hip  GPUTimer.hip  InitializeFinalize.cpp  JobManager.cpp  LinearAlgebra.cpp  Memory.cpp  OpenMP.c  Print.cpp  PyGPUView.hip  PyGpuExceptions.hip  PyMain.cpp  PyTensorAlgebra.cpp  PyTensorAlgebra.hip  PyTensors.cpp  Section.cpp  Sort.cpp  State.cpp  SymmIndex.cpp  Symmetry.cpp  TensorAlgebra.cpp  TensorAlgebraThreads.cpp  TensorConvert.cpp  ThreadPool.cpp  Timer.cpp  Utils.cpp  _GPUUtils.hip  suffix_test.cpp  test_outer_product.py
src/include/: .doxyfile  GPUTimer.hpp  einsums.hpp
src/parallel/: MPI.cpp
src/polynomial/: Laguerre.cpp
src/python/: CMakeLists.txt  PyGPUView.hip  PyGpuExceptions.hip  PyMain.cpp  PyTensorAlgebra.cpp  PyTensorAlgebra.hip  PyTensors.cpp  PyTesting.cpp  PyTesting.hip
testing/: CMakeLists.txt
testing/consume/: CMakeLists.txt  HelloWorld.cpp  README.md
testing/testing/: CMakeLists.txt
tests/: ArithmeticTensor.cpp  BlockDeviceTensor.hip  BlockTensor.cpp  CMakeLists.txt  Decomposition.cpp  DeviceTensor.hip  DeviceTensorView.hip  DeviceTensor_extras.hip  DeviceTiledTensor.hip  Disk.cpp  ElementOps.cpp  ElementOpsGPU.hip  EricaSVD.h5  FFT.cpp  FunctionTensor.cpp  GPU.hip  GPULinearAlgebra.hip  GPUTensorAlgebra.hip  GPUTensorAlgebraTasks.hip  GPUTensorAlgebra_Jobs.hip  InitFinalize.cpp  LinearAlgebra.cpp  Other.cpp  OtherCatch.cpp  Parallel.cpp  Polynomial.cpp  QChemTests.cpp  RuntimeTensors.cpp  SymmTensor.cpp  Tensor.cpp  TensorAlgebra.cpp  TensorAlgebraTasks.cpp  TensorAlgebra_Jobs.cpp  TiledTensor.cpp  pytest.ini  test_direct_product.py  test_dot.py  test_dot_product.py  test_einsums.py  test_generic.py  (+10 more)
tests/Common/: main.cpp
tests/TensorAlgebra/: CMakeLists.txt  TensorAlgebra.cpp
(+8283 files in other folders)
